# rag-conversational-engine-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_COMPONENTS.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_UPDATED.md  CAPSTONE_SUBMISSION.md  CHANGELOG.md  CI_CD_GUIDE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_QUICKSTART.md  CLAUDE.md  COMPREHENSIVE_TEST_SUMMARY.md  DEPLOYMENT_READY_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  GUARDRAILS_IMPLEMENTATION.md  GUARDRAILS_QUICKSTART.md  HITL_DEPLOYMENT_READY.md  HITL_GUIDE.md  HITL_IMPLEMENTATION_SUMMARY.md  HITL_QUICKSTART.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_SUMMARY.md  PHASE_6_PLAN.md  PHASE_6_RESULTS.md  PROJECT_STATUS.md  PYTHON_311_SETUP.md  PYTORCH_WINDOWS_FIX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FINAL.md  STATUS.md  (+17 more)
.claude/: launch.json  phase0_status.json  phase1_status.json  phase2_status.json  settings.json
agent_definitions/: __init__.py  axiom.py  eira.py  iris.py  kira.py  nova.py  sentinel.py  vega.py
agents/: verifier.py
app/: components.py  demo_mode.py  hitl_dashboard.py  integration.py  main.py  wire_tools.py
chroma/: client.py
config/: constants.py  llm_config.py
db/: engine.py  seed.py
guardrails/: GUARDRAILS.md  __init__.py  audit_logger.py  input_validation.py  output_validation.py  schema_enforcement.py  sql_safety.py
hooks/: postprocessing.py  preprocessing.py
models/: employee.py  pydantic_io.py
scripts/: init_databases.py  test_e2e.py  (+2 more)
(+14 files in other folders)
