[project]
name = "eira-rag-engine"
version = "1.0.0"
description = "EIRA: Multi-agent RAG conversational engine with employee + weather intelligence"
requires-python = ">=3.11"

dependencies = [
    "openai-agents>=0.0.19",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "faker>=25.0.0",
    "tavily-python>=0.3.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require live API keys (deselect with -m 'not integration')",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agents", "tools", "models", "config", "guardrails", "hooks", "db", "chroma"]
omit = ["tests/*", "app/*"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "models", "config", "guardrails", "hooks", "db", "chroma"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
